--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,13 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
           📄 Descargar Boletín Noviembre
         </a>
       </li>
+<li style="margin-bottom:6px;">
+        <a href="boletin_nov_ok.pdf" download 
+           style="color:#60a5fa; text-decoration:none; font-weight:700;">
+          📄 Descargar Boletín Diciembre
+        </a>
+      </li>
+
     </ul>
   `
 },   
