--- a/index.html
+++ b/index.html
@@ -926,6 +926,18 @@ COLINEAL CORPORATION CIA LTDA`
           'LOOR ERAS WALTER – 0993588979'
       },
 
+  
+      { name: ' Guayaquil Terceros',
+        body:
+          'M&M ELECTRONICSERVICE S.A.S. – 0985116621 – 0978757179\n' +
+          'BORBOR TOMALA GUILLERMO ANTONIO – 0990762954 – 0960640173\n' +
+          'HIDALGO LAYANA DANNY ALEX – 0980788827\n' +
+          'CAÑIZARES ZAPATA ROMNY JEFFRE – 0986725165 – 0969570575\n' +
+          'BRIOSERVICES CIA LTDA – 0959586999\n' +
+          'PROSERVICIO SAS – 0983391758 – 0962922315\n' +
+          'CLIMACO AREVALO IZURIETA – 0986406196\n' 
+      },
+
       //  LOJA  
       { name: 'Técnicos Loja',
         body:
