--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ PANEL INTERACTIVO E-BOARD 86W11K UHD, 3840 x 2160 60Hz, LG PANEL, 450cd/m² — 
 
 
 { name: 'Hora del técnico',
-        body: 'Estimado cliente le informamos que su orden de servicio: ___ se encuentra planificada para el día: ___\nPuede comunicarse de manera directa con el técnico: ___ al número: ___\nRecuerde nuestros horarios de visita: desde las 9:00 am hasta 18h00 pm.\nGracias por comunicarse con Indurama, es un placer servirle.' },
+        body: 'Estimado cliente le informamos que su orden de servicio: ___ se encuentra planificada para el día: ___\nPuede comunicarse de manera directa con el técnico: ___ al número: ___\nGracias por comunicarse con Indurama, es un placer servirle.' },
 
 
 
