--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ h4 {
   font-family: system-ui, sans-serif;
   text-align: center;
   animation: mover 8s ease-in-out infinite, luces 1.8s infinite;
-  color: #e5e7eb;
+  color: #000000;
   letter-spacing: .5px;
   text-shadow: 0 0 5px rgba(255,255,255,.3);
 }
@@ -1916,69 +1916,116 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
       <hr style="border:0; border-top:2px solid #111; margin:6px 0 14px;">
 
       <div>
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Distribución LATAM</h4>
-        <p style="margin:0 0 10px;">
-          <strong>Maycol Herrera</strong> — 
-          <a href="mailto:mherrerab@indurama.com" style="color:inherit; text-decoration:none;">mherrerab@indurama.com</a><br>
-          • Colombia · República Dominicana · El Salvador<br>
-          <strong>Cristina Gárate</strong> — 
-          <a href="mailto:cgarate@indurama.com" style="color:inherit; text-decoration:none;">cgarate@indurama.com</a><br>
-          • Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras
-        </p>
 
-        <hr style="border:0; border-top:1px solid #9ca3af; margin:10px 0 12px;">
 
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Canales de contacto según origen de compra</h4>
-        <ul style="margin:0 0 10px; padding-left:18px;">
-          <li>Compra en <strong>Indurama.com</strong> (web): <strong>0984001934</strong>.</li>
-          <li>Compra por <strong>WhatsApp</strong>: <strong>0999303030</strong>.</li>
-        </ul>
 
-        <hr style="border:0; border-top:1px dashed #b6b6b6; margin:10px 0 12px;">
 
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Diferenciación del tipo de compra (factura)</h4>
-        <p style="margin:0 0 10px;">
-          — Revisar el campo “Observaciones” de la factura.<br>
-          — Si aparece un <strong>número de pedido</strong> ⇒ <strong>Venta interna</strong>.<br>
-          — Si <strong>no</strong> tiene número de pedido (ej.: “Venta CC Recreo”) ⇒ <strong>Venta externa</strong>.
-        </p>
+        <h3 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">
 
-        <hr style="border:0; border-top:1px dotted #b6b6b6; margin:10px 0 12px;">
+<h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">VENTAS CONTACTOS</h4>
 
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Instalaciones gratuitas</h4>
-        <p style="margin:0 0 12px;">
-          — Todos los productos comprados en <strong>eCommerce</strong> e <strong>islas</strong> tienen instalación <strong>gratuita</strong>.<br>
-          — Si es <strong>foráneo</strong>, aplica costo de <strong>movilización</strong>.
-        </p>
+<table style="width:100%; border-collapse:collapse; font-family:Arial, sans-serif; font-size:14px;">
+  <thead>
+    <tr style="background:#f3f4f6;">
+      <th style="border:1px solid #ccc; padding:8px;">CANAL</th>
+      <th style="border:1px solid #ccc; padding:8px;">NÚMERO SOPORTE</th>
+      <th style="border:1px solid #ccc; padding:8px;">ENCARGADO 1</th>
+      <th style="border:1px solid #ccc; padding:8px;">ENCARGADO 2</th>
+      <th style="border:1px solid #ccc; padding:8px;">OBSERVACIÓN (DETALLE EN FACTURA)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="border:1px solid #ccc; padding:8px;">Mercado Libre</td>
+      <td style="border:1px solid #ccc; padding:8px;">0984001934</td>
+      <td style="border:1px solid #ccc; padding:8px;">John Lapo</td>
+      <td style="border:1px solid #ccc; padding:8px;">Javier Recalde</td>
+      <td style="border:1px solid #ccc; padding:8px;">VENTA ML</td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #ccc; padding:8px;">Venta Plataforma (Indurama.com)</td>
+      <td style="border:1px solid #ccc; padding:8px;">0984001934</td>
+      <td style="border:1px solid #ccc; padding:8px;">John Lapo</td>
+      <td style="border:1px solid #ccc; padding:8px;">Javier Recalde</td>
+      <td style="border:1px solid #ccc; padding:8px;">VENTA PLATAFORMA</td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #ccc; padding:8px;">Venta Interna</td>
+      <td style="border:1px solid #ccc; padding:8px;">0993891344</td>
+      <td style="border:1px solid #ccc; padding:8px;">Michael Vásquez</td>
+      <td style="border:1px solid #ccc; padding:8px;">—</td>
+      <td style="border:1px solid #ccc; padding:8px;">
+        Debe constar número de pedido interno (ej.: 39356)
+      </td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #ccc; padding:8px;">Venta Asistida WhatsApp</td>
+      <td style="border:1px solid #ccc; padding:8px;">0999303030</td>
+      <td style="border:1px solid #ccc; padding:8px;">Geovanny Calle</td>
+      <td style="border:1px solid #ccc; padding:8px;">—</td>
+      <td style="border:1px solid #ccc; padding:8px;">VENTA ASISTIDA WPP</td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #ccc; padding:8px;">Tiendas e Islas</td>
+      <td style="border:1px solid #ccc; padding:8px;">0994409679</td>
+      <td style="border:1px solid #ccc; padding:8px;">David Idrovo</td>
+      <td style="border:1px solid #ccc; padding:8px;">—</td>
+      <td style="border:1px solid #ccc; padding:8px;">
+        ISLA CC EL RECREO / ISLA MALL DEL SOL / CITY MALL<br>
+        <small><strong>Nota:</strong> Uso interno. No compartir número con clientes.</small>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-        <hr style="border:0; border-top:1px solid #9ca3af; margin:12px 0;">
+ <hr style="border:0; border-top:1px solid #9ca3af; margin:12px 0;">
 
-     
-        <p style="margin:0 0 12px;">
-          <strong>No generar tickets para los siguientes modelos:</strong><br>
-          PRAGA · BRESIA · OVIEDO · HAMBURGO · GINEBRA · EI-4PVI60 (modelo antiguo) ·  <br>
+Distribución LATAM</h3>
+<p style="margin:0 0 10px;">
+  <strong>Maycol Herrera</strong> — 
+  <a href="mailto:mherrerab@indurama.com" style="color:inherit; text-decoration:none;">mherrerab@indurama.com</a><br>
+  • Colombia · República Dominicana · El Salvador<br>
+  <strong>Cristina Gárate</strong> — 
+  <a href="mailto:cgarate@indurama.com" style="color:inherit; text-decoration:none;">cgarate@indurama.com</a><br>
+  • Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras
+</p>
 
-          <strong>Aplica para:</strong><br>
-          Productos con más de 5 años de fabricación.<br>
-          Modelos correspondientes a los años <strong>2000–2019</strong>.<br> 
+<hr style="border:0; border-top:1px dotted #b6b6b6; margin:10px 0 12px;">
 
-          <strong>Indicaciones:</strong><br>
-          No brindar explicaciones sobre repuestos, modelos o tiempos.<br>
-          Mantener la comunicación <strong>breve, clara y concreta</strong>.
-        </p>
+<h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Instalaciones gratuitas</h4>
+<p style="margin:0 0 12px;">
+  — Todos los productos comprados en <strong>eCommerce</strong> e <strong>islas</strong> tienen instalación <strong>gratuita</strong>.<br>
+  — Si es <strong>foráneo</strong>, aplica costo de <strong>movilización</strong>.
+</p>
 
-        <hr style="border:0; border-top:1px solid #b6b6b6; margin:12px 0;">
+<hr style="border:0; border-top:1px solid #9ca3af; margin:12px 0;">
 
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
-           Colombia
-        </h4>
-        <p style="margin:0;">
-          • Las <strong>conversiones</strong> son <strong>gratuitas</strong>.<br>
-          • Las <strong>instalaciones</strong> en <strong>Bogotá</strong> y <strong>Bucaramanga</strong> son <strong>gratuitas</strong>.<br>
-          <em>(Aplica únicamente para cocinas.)</em>
-        </p>
+<p style="margin:0 0 12px;">
+  <strong>No generar tickets para los siguientes modelos:</strong><br>
+  PRAGA · BRESIA · OVIEDO · HAMBURGO · GINEBRA · EI-4PVI60 (modelo antiguo) ·  <br>
+
+  <strong>Aplica para:</strong><br>
+  Productos con más de 5 años de fabricación.<br>
+  Modelos correspondientes a los años <strong>2000–2019</strong>.<br> 
+
+  <strong>Indicaciones:</strong><br>
+  No brindar explicaciones sobre repuestos, modelos o tiempos.<br>
+  Mantener la comunicación <strong>breve, clara y concreta</strong>.
+</p>
+
+<hr style="border:0; border-top:1px solid #b6b6b6; margin:12px 0;">
+
+<h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
+   Colombia
+</h4>
+<p style="margin:0;">
+  • Las <strong>conversiones</strong> son <strong>gratuitas</strong>.<br>
+  • Las <strong>instalaciones</strong> en <strong>Bogotá</strong> y <strong>Bucaramanga</strong> son <strong>gratuitas</strong>.<br>
+  <em>(Aplica únicamente para cocinas.)</em>
+</p>
       </div>
     </div>
+
   `
 },
 
