--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
       <td style="border:1px solid #ccc; padding:8px;">VENTA ASISTIDA WPP</td>
     </tr>
     <tr>
-      <td style="border:1px solid #ccc; padding:8px;">Tiendas e Islas</td>
+      <td style="border:1px solid #ccc; padding:8px;"> Islas</td>
       <td style="border:1px solid #ccc; padding:8px;">0994409679</td>
       <td style="border:1px solid #ccc; padding:8px;">David Idrovo</td>
       <td style="border:1px solid #ccc; padding:8px;">—</td>
