--- a/index.html
+++ b/index.html
@@ -126,22 +126,22 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 
  
 
-<h2 class="titulo-sombra">Respuestas Rápidas 
+<h2 class="titulo-sombra"> 
     <img 
-    src="https://i.pinimg.com/originals/bb/f9/fd/bbf9fd2479c247dfb87cd51a3a7ae71d.gif"
+    src="   https://i.pinimg.com/originals/91/bb/e8/91bbe84aa20c485badf80c055c0dfe3c.gif"
  
-    alt="Decoración navideña"
+    alt="carnaval "
     style="max-width:100%; max-height:50px; height:auto; display:block; margin:auto;"
     >
 </h2>
 
 
-
+<h4> 🥳 🎉 FELICES CARNAVALES 🎉 🥳 </h4>
 
 <style>
 .titulo-sombra{
   text-align:center;
-  color:#fff;
+  color:#F54927;
   font-weight:800;
   font-size:clamp(22px,3vw,32px);
   text-shadow:
@@ -201,7 +201,7 @@ h4 {
 }
 </style>
 
- <h4> 🎁 🧣 FELIZ NAVIDAD 🧣 🎁 </h4>
+ 
 
 
 <div class="notices">
@@ -899,6 +899,7 @@ COLINEAL CORPORATION CIA LTDA`
           'PAUTE PATIÑO JUAN DIEGO – 0979689712\n' +
           'LUIS ALFREDO TORRES PEÑALOZA – 0979862095\n' +
           'SAQUICHAGUI LUCERO CHRISTIAN PAUL – 0967476697\n' +
+          'JEAN CARLOS MARQUEZ – 0967476697\n' +
           'ENMA VIVIANA DUCHITANGA LOJANO – 0992738868'
       },
 
@@ -1001,9 +1002,8 @@ COLINEAL CORPORATION CIA LTDA`
     'LUISA HIPATIA PLUA PILLASAGUA – 0980098308\n' +
     ' CRISTIAN GUEVARA  –  0997763172\n' +
     ' MERCY DE LAGO  –   0997620929\n' +
+     ' DAVID ARELLANO  –   0995775950\n' +
     ' DIEGO PARDO –  0967318948\n' +
-
-
     'JONATHAN RAMIREZ – 0985814354'
 
 
@@ -1937,14 +1937,14 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
   <tbody>
     <tr>
       <td style="border:1px solid #ccc; padding:8px;">Mercado Libre</td>
-      <td style="border:1px solid #ccc; padding:8px;">0984001934</td>
+      <td style="border:1px solid #ccc; padding:8px;">0959537145</td>
       <td style="border:1px solid #ccc; padding:8px;">John Lapo</td>
       <td style="border:1px solid #ccc; padding:8px;">Javier Recalde</td>
       <td style="border:1px solid #ccc; padding:8px;">VENTA ML</td>
     </tr>
     <tr>
       <td style="border:1px solid #ccc; padding:8px;">Venta Plataforma (Indurama.com)</td>
-      <td style="border:1px solid #ccc; padding:8px;">0984001934</td>
+      <td style="border:1px solid #ccc; padding:8px;">0959537145</td>
       <td style="border:1px solid #ccc; padding:8px;">John Lapo</td>
       <td style="border:1px solid #ccc; padding:8px;">Javier Recalde</td>
       <td style="border:1px solid #ccc; padding:8px;">VENTA PLATAFORMA</td>
@@ -2034,7 +2034,7 @@ Distribución LATAM</h3>
 
       /* ======= CARRUSEL AL FINAL ======= */
       {
-        name: 'Boletín diciembre ',
+        name: 'Boletín ENERO ',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="8000">
@@ -2045,15 +2045,15 @@ Distribución LATAM</h3>
     </a>
   </span>
 
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548970/Instalaciones_12_25_1__page-0001_gwmzfu.jpg  " alt="Boletín 0">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548970/Instalaciones_12_25_1__page-0002_xzvlqn.jpg " alt="Boletín 1">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548970/Instalaciones_12_25_1__page-0003_vqjbmo.jpg  " alt="Boletín 2">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548970/Instalaciones_12_25_1__page-0004_apebn5.jpg" alt="Boletín 3">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548970/Instalaciones_12_25_1__page-0005_jtjzwk.jpg " alt="Boletín 4">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548980/Instalaciones_12_25_1__page-0006_t4admo.jpg  " alt="Boletín 5">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548971/Instalaciones_12_25_1__page-0007_rve4ol.jpg " alt="Boletín 6">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548971/Instalaciones_12_25_1__page-0008_ppiqio.jpg " alt="Boletín 7">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1765548971/Instalaciones_12_25_1__page-0009_mecvg2.jpg  " alt="Boletín 8">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398984/Instalaciones_1_26_page-0001_ciiwy3.jpg  " alt="Boletín 0">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398980/Instalaciones_1_26_page-0002_cfdg1p.jpg  " alt="Boletín 1">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0003_qojniz.jpg  " alt="Boletín 2">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398984/Instalaciones_1_26_page-0004_eujtjl.jpg " alt="Boletín 3">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0005_dy321b.jpg " alt="Boletín 4">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398982/Instalaciones_1_26_page-0006_uvwnib.jpg  " alt="Boletín 5">
+  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398982/Instalaciones_1_26_page-0007_lquoas.jpg " alt="Boletín 6">
+  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398990/Instalaciones_1_26_page-0008_z9kvgb.jpg " alt="Boletín 7">
+  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0009_cxrtkd.jpg  " alt="Boletín 8">
   
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
