--- a/index.html
+++ b/index.html
@@ -2039,7 +2039,7 @@ Distribución LATAM</h3>
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="8000">
    <span slot="title">
-    <a href="boletin_diciembre25.pdf" download 
+    <a href=" InstalacionesENERO26.pdf" download 
        style="color:#60a5fa; text-decoration:none; font-weight:700;">
       📄 Descargar Boletín
     </a>
