--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,7 @@ Distribución LATAM</h3>
 </h4>
 <p style="margin:0;">
   • Las <strong>conversiones</strong> son <strong>gratuitas</strong>.<br>
-  • Las <strong>instalaciones</strong> en <strong>Bogotá</strong> y <strong>Bucaramanga</strong> son <strong>gratuitas</strong>.<br>
+  • Las <strong>instalaciones</strong> en <strong>Bogotá</strong> y <strong>Santander</strong> son <strong>gratuitas</strong>.<br>
   <em>(Aplica únicamente para cocinas.)</em>
 </p>
       </div>
