--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 </h2>
 
 
-<h4> 🥳 🎉 FELICES CARNAVALES 🎉 🥳 </h4>
+<h4> 🥳 🎉 ABANDONO DICIEMBRE 3% 🎉 🥳 </h4>
 
 <style>
 .titulo-sombra{
@@ -935,6 +935,7 @@ COLINEAL CORPORATION CIA LTDA`
           'CAÑIZARES ZAPATA ROMNY JEFFRE – 0986725165 – 0969570575\n' +
           'BRIOSERVICES CIA LTDA – 0959586999\n' +
           'PROSERVICIO SAS – 0983391758 – 0962922315\n' +
+	  'MERCEDES GUACHO – 0964025090 \n' +
           'CLIMACO AREVALO IZURIETA – 0986406196\n' 
       },
 
@@ -1017,6 +1018,7 @@ COLINEAL CORPORATION CIA LTDA`
           'PALOMEQUE CADENA JOSE MAURICIO – 0958789023\n' +
           'PERALTA ORTIZ JULIO CESAR – 0981272144\n' +
           'RefrigeraciónJM Jonny Dario Moreira Cedeño – 0994434002\n' +
+	  ' JONATHAN CALDERON  – 0999523295\n' +
           'CONFORME PATIÑO ESTEBAN SALOMON – 0993248663'
       },
 
@@ -1967,8 +1969,8 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
     </tr>
     <tr>
       <td style="border:1px solid #ccc; padding:8px;"> Tienda Indurama e Islas</td>
-      <td style="border:1px solid #ccc; padding:8px;">0994409679</td>
-      <td style="border:1px solid #ccc; padding:8px;">David Idrovo</td>
+      <td style="border:1px solid #ccc; padding:8px;"> 0968249033 </td>
+      <td style="border:1px solid #ccc; padding:8px;">Mariuxi Chávez o Vivían Espinoza </td>
       <td style="border:1px solid #ccc; padding:8px;">—</td>
       <td style="border:1px solid #ccc; padding:8px;">
         ISLA CC EL RECREO / ISLA MALL DEL SOL / CITY MALL<br>
@@ -2045,15 +2047,15 @@ Distribución LATAM</h3>
     </a>
   </span>
 
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398984/Instalaciones_1_26_page-0001_ciiwy3.jpg  " alt="Boletín 0">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398980/Instalaciones_1_26_page-0002_cfdg1p.jpg  " alt="Boletín 1">
-  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0003_qojniz.jpg  " alt="Boletín 2">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398984/Instalaciones_1_26_page-0004_eujtjl.jpg " alt="Boletín 3">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0005_dy321b.jpg " alt="Boletín 4">
-  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398982/Instalaciones_1_26_page-0006_uvwnib.jpg  " alt="Boletín 5">
-  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398982/Instalaciones_1_26_page-0007_lquoas.jpg " alt="Boletín 6">
-  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398990/Instalaciones_1_26_page-0008_z9kvgb.jpg " alt="Boletín 7">
-  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1768398986/Instalaciones_1_26_page-0009_cxrtkd.jpg  " alt="Boletín 8">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197807/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0001_ayzk31.jpg   " alt="Boletín 0">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197806/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0002_povany.jpg   " alt="Boletín 1">
+  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197808/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0003_ef4zt3.jpg " alt="Boletín 2">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197807/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0004_fso8jz.jpg  " alt="Boletín 3">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197807/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0005_aolft2.jpg " alt="Boletín 4">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197809/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0006_b9xrmw.jpg " alt="Boletín 5">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197806/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0007_c1y5ij.jpg   " alt="Boletín 6">
+  <img src="  https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197807/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0008_qteedi.jpg   " alt="Boletín 7">
+  <img src="   https://res.cloudinary.com/dwbrg9r2n/image/upload/v1769197808/Instalaciones_1_26_Actualizaci%C3%B3n_2_page-0009_ndoiue.jpg   " alt="Boletín 8">
   
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
