--- a/index.html
+++ b/index.html
@@ -1118,8 +1118,10 @@ COLINEAL CORPORATION CIA LTDA`
 {
   name: ' Quevedo Administrativo',
   body: `
-<strong>Líder :</strong> <br> Tania Arias  0999302369 tarias@servihogar.com.ec <br><br>
-<strong>Asistente:</strong> Verónica Quisphe 0967820137
+<strong>Líder :</strong> <br> Verónica Quishpe Quevedo
+0967820137
+quevedo@servihogar.com.ec <br><br>
+<strong>Asistente:</strong>  
 `
 },
 
