--- a/index.html
+++ b/index.html
@@ -957,7 +957,9 @@ COLINEAL CORPORATION CIA LTDA`
     'VALDEZ LOARTE BRAULIO ROBINSON – 0988887001\n' +
     'HERNANDEZ SARAGURO DANIEL MARTIN – 0989688625\n' +
     'ARIEL DAVID MURILLO GAVILANEZ – 0988847418 / 0969366212\n' +
+    'STALIN DAVID VERDUGA RODRIGUEZ – 0992296233 \n' +
     'JULIO MOSCOSO SANTACRUZ – 0983422976 / 0998826581\n' +
+
     'ARIEL DAVID MURILLO – 0988847418'
 },
 
@@ -1070,7 +1072,7 @@ COLINEAL CORPORATION CIA LTDA`
 <strong>Planificación</strong><br> Katy Mendoza 0984567535 kmendoza@indurama.com <br>
 <strong>Facturación/Ventas/Proveedores:</strong><br> Cristian Olmedo 0997283870  <br>
 <strong>Repuestos/Marcas:</strong><br> Ricardo López 995787373 rxlopez@indurama.com  <br>
-<strong>Cambios/Ingreso Taller:</strong><br> Cynthia Lomas 0988766868 base celular  clomas@indurama.com 
+<strong>Cambios/Ingreso Taller:</strong><br> Jeferson 0992569830  
 `
 },
 {
@@ -1579,7 +1581,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 },
 {
   name: 'Centro de Servicio – Quevedo',
-  body: ` Estamos ubicados en: Km 1 1/2 vía a Valencia, frente a Jardín Tía Jessy 
+  body: ` Estamos ubicados en: Km 1 1/2 vía a Valencia, a lado de la bodega de la Big cola https://maps.app.goo.gl/W8aE73AiiWj4Tswd6  
  
 `
 },
